syntax = "proto3";
package stateset.core.refund;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "refund/params.proto";
import "refund/refund.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/stateset/core/x/refund/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/stateset/core/refund/params";
  }
  // Queries a Refund by id.
	rpc Refund(QueryGetRefundRequest) returns (QueryGetRefundResponse) {
		option (google.api.http).get = "/stateset/core/refund/refund/{id}";
	}

	// Queries a list of Refund items.
	rpc RefundAll(QueryAllRefundRequest) returns (QueryAllRefundResponse) {
		option (google.api.http).get = "/stateset/core/refund/refund";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetRefundRequest {
	uint64 id = 1;
}

message QueryGetRefundResponse {
	Refund Refund = 1 [(gogoproto.nullable) = false];
}

message QueryAllRefundRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRefundResponse {
	repeated Refund Refund = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
